Cosmetic changes including fixing overlapping footer

--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -6,6 +6,7 @@ body {
   background-size: cover;
   background-color: #464646;
   background-image: url("../images/Gellen.jpg");
+  padding-bottom: 200px;
 }
 
 .Hcard {
@@ -14,23 +15,24 @@ body {
   width: 90%;
   margin-right: auto;
   margin-left: auto;
-  offset: 0px, 30px;
   background-color: rgba(60, 68, 77, 0.8);
-  height: 500px;
+  min-height: 300px;
   color: white;
   border-radius: 6px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 
 .Hcard:hover {
   box-shadow: 8px 8px 16px 0 rgba(0, 0, 0, 0.685);
 }
 
-.Hcard .container {
-  padding: 2px 16px;
+.Hcard container {
   text-align: center;
   align-items: center;
-}
-  .container {
-  padding: 0px;
-  position: fixed;
+  width: 35%;
+  padding: 10px 45px;
+  margin: 2%;
 }
