--- a/client/src/styles/Footer.css
+++ b/client/src/styles/Footer.css
@@ -3,7 +3,7 @@
   position: fixed;
   display: table;
   width: 100vw;
-  height:75px;
+  height:100px;
   padding-left: 0px;
   padding-bottom: 10px;
   padding-top: 10px;
